--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,11 +5,17 @@ logfile_maxbytes=1MB
 logfile_backups=1
 loglevel=info
 
+[inet_http_server]
+port=127.0.0.1:8081
+
+[supervisorctl]
+serverurl=http://127.0.0.1:8081
+
 [program:kontrol]
-command=/bin/sh boot.sh
+command=/bin/sh pod.sh
 stopsignal=INT
 stopasgroup=true
-stopwaitsecs=30
+stopwaitsecs=60
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
