--- a/python/kontrol/log.cfg
+++ b/python/kontrol/log.cfg
@@ -11,7 +11,7 @@ keys=basic
 handlers=console
 
 [logger_kontrol]
-level=DEBUG
+level=INFO
 handlers=console, rotating
 qualname=kontrol
 propagate=0
