--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,10 +6,13 @@ logfile_backups=1
 loglevel=info
 
 [inet_http_server]
-port=127.0.0.1:8081
+port=127.0.0.1:8001
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=http://127.0.0.1:8081
+serverurl=http://127.0.0.1:8001
 
 [program:kontrol]
 command=/bin/sh pod.sh
@@ -20,3 +23,6 @@ stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
+
+[include]
+files = /etc/supervisor/conf.d/*.conf
