--- a/code/automaton/log.cfg
+++ b/code/automaton/log.cfg
@@ -13,7 +13,7 @@ handlers=console
 [logger_automaton]
 level=INFO
 handlers=console, rotating
-qualname=automaton
+qualname=foo
 propagate=0
 
 [handler_console]
