--- a/supervisord.conf
+++ b/supervisord.conf
@@ -16,3 +16,14 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
 serverurl=http://127.0.0.1:8001
+
+
+[program:kontrol]
+command=sh kontrol.sh
+stopsignal=INT
+stopasgroup=true
+stopwaitsecs=60
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
